<resources>
    <string name="app_name">VectorEntry</string>
    <string name="text_main"></string>
    <string name="btn12">2f Tap and →\n(#)\n[\'Quit\']</string>
    <string name="btn11">2f Tap and ↑\n(0)\n+ - / *</string>
    <string name="btn10">2f Tap and ←\n(@)\n: ; !</string>
    <string name="btn9">↘\n(9)\nw x y z</string>
    <string name="btn8">↓\n(8)\nt u v</string>
    <string name="btn7">↙\n(7)\np q r s</string>
    <string name="btn6">→\n(6)\nm n o</string>
    <string name="btn5">Dbl Tap\n(5)\nj k l</string>
    <string name="btn4">←\n(4)\ng h i</string>
    <string name="btn3">↗\n(3)\nd e f</string>
    <string name="btn2">↑\n(2)\na b c</string>
    <string name="btn1">↖\n(1)\n, . ? \"</string>
</resources>
